# polar-codes

./: .gitignore  LICENSE.txt  README.md  SC_LLR_DECODER.md  main.py  requirements.txt  tests.ipynb
helpers/: __init__.py  bit.py  channels.py  coder.py  operations.py
src/: pyproject.toml
src/channels/: __init__.py  awgn.py  bec.py
src/core/: __init__.py  bp.py  code.py  construction.py  encoder.py  generator.py  sc.py  scl.py
src/core/crc/: crc.py  polys.py
src/polarcodes/: __init__.py
src/polarcodes/core/: __init__.py  generator.py
